# CellTagWeb

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: auth.py  image_manager.py  main.py  redis_client.py  state.py
config/: redis.conf
scripts/: create_user.py  flush_redis_to_files.py
